#211 property scan refactoring