@@ -23,7 +23,7 @@ public class CollectionsCdoFactory {
     }
 
     public Cdo createCdo(final CollectionWrapper wrapper, final Class<?> clazz) {
-        Property primaryProperty = propertyScanner.scan(wrapper.getClass()).get(0);
+        Property primaryProperty = propertyScanner.scan(wrapper.getClass()).getFirst();
         JaversMember javersMember = memberGenericTypeInjector.create(primaryProperty, clazz);
         Property fixedProperty = new Property(javersMember, false);
         ValueObjectType valueObject = new ValueObjectType(wrapper.getClass(), Lists.asList(fixedProperty));
